
    Contributed by Joshua Harlow.

- Async: HTTP client based on curl.

- Async: Now uses `poll` instead of `select` where available.

- MongoDB: Now supports priorities

    Contributed by Alex Koshelev.

- Zookeeper: Transport now uses the built-in suport in kazoo to handle
  failover when using a list of server names.

    Contributed by Joshua Harlow.

.. _version-3.0.35:

3.0.35
======
:release-date: 2016-03-22 11:22 P.M PST
:release-by: Ask Solem

- msgpack: msgpack support now requires msgpack-python > 0.4.7.

- Redis: TimeoutError was no longer handled as a recoverable error.

- Redis: Adds the ability to set more Redis connection options
  using ``Connection(transport_options={...})``.

    - ``socket_connect_timeout``
    - ``socket_keepalive`` (requires :mod:`redis-py` > 2.10)
    - ``socket_keepalive_options`` (requires :mod:`redis-py` > 2.10)

- msgpack: Fixes support for binary/unicode data

.. _version-3.0.34:

3.0.34
======
:release-date: 2016-03-03 05:30 P.M PST
:release-by: Ask Solem

- Qpid: Adds async error handling.

    Contributed by Brian Bouterse.

- Qpid: Delivery tag is now a UUID4 (Issue #563).

    Fix contributed by Brian Bouterse.

- Redis: Connection.as_uri() returned malformed URLs when the
  ``redis+socket`` scheme was ised (Issue celery/celery#2995).

- msgpack: Use binary encoding instead of utf-8 (Issue #570).

.. _version-3.0.33:

3.0.33
======
:release-date: 2016-01-08 06:36 P.M PST
:release-by: Ask Solem

- Now depends on :mod:`amqp` 1.4.9.

- Redis: Fixed problem with auxilliary connections causing the main
  consumer connection to be closed (Issue #550).

- Qpid: No longer uses threads to operate, to ensure compatibility with
  all environments (Issue #531).

.. _version-3.0.32:

3.0.32
======
:release-date: 2015-12-16 02:29 P.M PST
:release-by: Ask Solem

- Redis: Fixed bug introduced in 3.0.31 where the redis transport always
  connects to localhost, regardless of host setting.

.. _version-3.0.31:

3.0.31
======