@@ -1,11 +1,0 @@
-==========================================================
- Eventlet/Gevent Detection - ``kombu.syn``
-==========================================================
-
-.. contents::
-    :local:
-.. currentmodule:: kombu.syn
-
-.. automodule:: kombu.syn
-
-    .. autofunction:: detect_environment
