@@ -24,6 +24,7 @@ except ImportError:  # pragma: no cover
     except ImportError:
         register_after_fork = None  # noqa
 
+_environment = None
 
 def coro(gen):
 
@@ -34,6 +35,38 @@ def coro(gen):
         return it
     return wind_up
 
+
+def _detect_environment():
+    # ## -eventlet-
+    if 'eventlet' in sys.modules:
+        try:
+            from eventlet.patcher import is_monkey_patched as is_eventlet
+            import socket
+
+            if is_eventlet(socket):
+                return 'eventlet'
+        except ImportError:
+            pass
+
+    # ## -gevent-
+    if 'gevent' in sys.modules:
+        try:
+            from gevent import socket as _gsocket
+            import socket
+
+            if socket.socket is _gsocket.socket:
+                return 'gevent'
+        except ImportError:
+            pass
+
+    return 'default'
+
+
+def detect_environment():
+    global _environment
+    if _environment is None:
+        _environment = _detect_environment()
+    return _environment
 
 def entrypoints(namespace):
     try:
